add gen zgc for java 21 to default